app/assets/stylesheets/ui/thumbs/generic.css
li.generic {
  --thumb-width: 250px;
  --thumb-width-min: var(--thumb-width);

  list-style: none;
  display: inline-block;
  padding: 10px;
  margin: 4px;

  max-width: var(--thumb-width);
  min-width: var(--thumb-width-min);

  max-height: var(--thumb-height);
  min-height: calc(var(--thumb-height) - 110px);
}

li.generic.virtual,
li.generic:hover,
li.generic:focus-within {
  background: var(--thumb-hover-color);
}

li.generic.virtual.keep::after {
    content: "No Content";
    position: absolute;
    top: calc(50% + 0.5em);
    left: calc(50% - 2.5em);
    font-size: 2em;
    color: #6666b8;
}

ul.vertical li.generic {
  --thumb-width: 100%;
}

tr.activity td + td {
  width: 100%;
}

